<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="notification_message">Time To Take Your Medicine!</string>
    <string name="noticcation_message_title">Medication Intake</string>
    <string name="start_video_recording">Start Video Recording</string>
    <string name="stop_video_recording">Stop Video Recording</string>
    <string name="app_name">TB Cure</string>
    <string name="title">TB Cure</string>
    <string name="about">About TB Cure</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="designer">Patient</string>
    <string name="client">Doctor</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="remove_photo">REMOVE PHOTO</string>
    <string name="title_activity_signup">Patient Signup</string>
    <string name="title_activity_doctor_signup">Doctor Signup</string>
    <string name="title_activity_patient_photo">Patient Photo</string>
    <string name="title_activity_patient_bio_info">Patient BioInfo</string>
    <string name="title_activity_patient_info">Patient BioInfo</string>
    <string name="title_activity_doctor_photo">Doctors List</string>
    <string name="title_activity_doctor_bio_info">Doctor\'s BioInfo</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="ok">OK</string>
    <string name="title_activity_reminder">Drug Reminders</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_reminder">New Reminder</string>
    <string name="title_activity_reminder_list">Reminder List</string>
    <string name="title_activity_doctor_reports">Reports</string>
    <string name="title_activity_video_reports">Video Reports</string>
    <string name="title_activity_non_adherence_reports">Non-Adherence Reports</string>
    <string name="instructions">Instructions</string>
    <string name="medicine_name">Medicine name</string>
    <string name="type_of_medicine">Choose drug type</string>
    <string name="tablets">Tablets</string>
    <string name="injection">Injections</string>
    <string name="set">....</string>
    <string name="frequency">Frequency</string>
    <string name="times_day">Times/Day</string>
    <string name="set_time">Set Time</string>
    <string name="time">Time</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="save_menu">Save</string>
    <string name="cancel_menu">Cancel</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="doctor_practice">Specialty</string>
    <string name="title_activity_note_message">NoteMessageActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_video_capture">Video Capture</string>
    <string name="new_reminder_tab">New Reminder</string>
    <string name="reminder_list_tab">Reminders List</string>
    <string name="new_doctor_info_tab">New Doctor Info</string>
    <string name="doctors_list_tab">Doctors List</string>
    <string name="new_patient_info_tab">New Patient Info</string>
    <string name="video_reports_tab">Video Reports</string>
    <string name="non_adherence_reports_tab">Non-Adherence Reports</string>
    <string name="adherence_reports_tab">Adherence Reports</string>
    <string name="title_activity_adherence_reports">Adherence Reports</string>
    <string name="title_activity_alarm_display">Non-Adherence Reports</string>
    <string name="doctors_list">Doctors List</string>
    <string name="title_activity_video_view">TB Cure Video Player</string>
    <string name="medicine_refills_tab">Medicine Refills</string>
    <string name="title_activity_medicine_refills">Medicine Refills</string>

</resources>
