<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2f4f2f"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/txtPatientFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:hint="@string/first_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPatientSecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:hint="@string/second_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPatientDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:onClick="patientDOB"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:hint="@string/date_of_birth"
        android:inputType="date" />
    
    <RadioGroup 
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/radioMalePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#ffffff"
            android:textSize="7pt"/>
        
        <RadioButton 
            android:id="@+id/radioFemalePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="#ffffff"
            android:textSize="7pt"/>
    </RadioGroup>

    <EditText
        android:id="@+id/txtPatientUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPatientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address" />

    <EditText
        android:id="@+id/txtPatientPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/txtPatientConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="7pt"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/btnPatientSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:textColor="#2f4f2f"
        android:textStyle="bold"
        android:onClick="addPatient"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textColor="#2f4f2f"
        android:textStyle="bold"
        android:background="@drawable/button_background" />

</LinearLayout>