<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2f2f4f"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/medicine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medicine Name: "
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtMedicineName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/medicine_name"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Instructions: "
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtMedInstructions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/medicine_name"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/drug_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drug Type: "
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtMedDrugType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_of_medicine"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSetTimesPerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setTimesPerDay"
            android:text="@string/set"
            android:background="@drawable/button_background"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtDrugFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/frequency"
            android:textColor="#ffffff"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setTime"
            android:background="@drawable/button_background"
            android:text="@string/set_time"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtSetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:textColor="#ffffff"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDate"
            android:background="@drawable/button_background"
            android:text="@string/start_date"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_date_hint"
            android:inputType="datetime"
            android:textColor="#ffffff"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="endDate"
            android:background="@drawable/button_background"
            android:text="@string/end_date"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/txtEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/end_date_hint"
            android:inputType="datetime"
            android:textColor="#ffffff"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnSaveReminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="addNewReminder"
            android:background="@drawable/button_background"
            android:text="@android:string/ok"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnCancelReminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick=""
            android:background="@drawable/button_background"
            android:text="@android:string/cancel"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>