<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f4f"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.med.salma.PatientPhotoActivity" >

    <ImageView
        android:id="@+id/patientProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/user" />

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientProfilePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
         android:drawableStart="@android:drawable/ic_menu_add"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:textColor="#ffffff"
        android:text="@string/add_photo" />

    <Button
        android:id="@+id/btnRemovePhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnAddPhoto"
        android:layout_alignLeft="@+id/btnAddPhoto"
        android:layout_below="@+id/btnAddPhoto"
        android:layout_marginTop="25dp"
        android:drawableStart="@android:drawable/ic_menu_delete"
        android:drawableLeft="@android:drawable/ic_menu_delete"
        android:textColor="#ffffff"
        android:text="@string/remove_photo" />

</RelativeLayout>
